Use pure CXF for transport (easier for test). Resume lb impl.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>camel-core</artifactId>
             <version>${camel.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <version>4.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
