Complete a first Dynamic LB draft based on a Queue LB

--- a/rt/pom.xml
+++ b/rt/pom.xml
@@ -35,7 +35,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-
+                        <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
