Resume DLB console. Add Karaf features descriptor.

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <modules>
         <module>rt</module>
         <module>console</module>
+        <module>feature</module>
     </modules>
 
 </project>
